<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/exchangeList"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.45" >
    </ListView>

    <Spinner
        android:id="@+id/exchangeNumberSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:prompt="@string/number_prompt" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:text="@string/start_exchange" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange_info"
        android:textSize="16sp" />

</LinearLayout>